@@ -4,13 +4,12 @@ import com.java.recruitment.service.model.user.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
 import java.util.List;
 
 public final class JwtEntityFactory {
     public static JwtEntity create(final User user) {
         SimpleGrantedAuthority authority = new SimpleGrantedAuthority(user.getRole().name());
-        List<GrantedAuthority> authorities = Collections.singletonList(authority);
+        List<GrantedAuthority> authorities = List.of(authority);
 
         return new JwtEntity(
                 user.getId(),
